--- a/app/shared/states/vista2/vista2.html
+++ b/app/shared/states/vista2/vista2.html
@@ -4,31 +4,77 @@
         <h3>Vista 2</h3>
     </center>
 
+
+    <!--<md-input-container>
+        <label>Biography</label>
+        <textarea name="bio" ng-model="biography" required md-maxlength="150"></textarea>
+        <div ng-messages="userForm.bio.$error" ng-show="userForm.bio.$dirty">
+            <div ng-message="required">This is required!</div>
+            <div ng-message="md-maxlength">That's too long!</div>
+        </div>
+    </md-input-container>
+    <md-input-container>
+        <input aria-label="title" ng-model="title">
+    </md-input-container>
+    <md-input-container>
+        <input placeholder="title" ng-model="title">
+    </md-input-container>-->
+
+
+
     <form name="userForm">
-        <md-input-container>
-            <label>Last Name</label>
-            <input name="lastName" ng-model="lastName" required md-maxlength="10" minlength="4">
-            <div ng-messages="userForm.lastName.$error" ng-show="userForm.lastName.$dirty">
-                <div ng-message="required">This is required!</div>
-                <div ng-message="md-maxlength">That's too long!</div>
-                <div ng-message="minlength">That's too short!</div>
-            </div>
-        </md-input-container>
-        <md-input-container>
-            <label>Biography</label>
-            <textarea name="bio" ng-model="biography" required md-maxlength="150"></textarea>
-            <div ng-messages="userForm.bio.$error" ng-show="userForm.bio.$dirty">
-                <div ng-message="required">This is required!</div>
-                <div ng-message="md-maxlength">That's too long!</div>
-            </div>
-        </md-input-container>
-        <md-input-container>
-            <input aria-label="title" ng-model="title">
-        </md-input-container>
-        <md-input-container>
-            <input placeholder="title" ng-model="title">
-        </md-input-container>
+
+
+        <div layout-gt-sm="row">
+            <md-input-container class="md-block" flex-gt-sm>
+                <label>Nombre</label>
+                <input ng-model="user.firstName" required>
+
+            </md-input-container>
+
+            <md-input-container class="md-block" flex-gt-sm>
+                <label>Apellido</label>
+                <input ng-model="theMax" required>
+            </md-input-container>
+
+
+        </div>
+
+        <div layout-gt-sm="row" layout-ms="column">
+
+            <md-input-container class="md-block" flex-gt-sm>
+                <label>Correo Electronico</label>
+                <input required type="email" name="clientEmail" ng-model="project.clientEmail" minlength="10" maxlength="100" ng-pattern="/^.+@.+\..+$/"
+                    placeholder="ejemplo@mail.com" />
+
+                <div ng-messages="userForm.clientEmail.$error" role="alert">
+                    <div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">
+                        Tu correo debe contener un esquema de email (xxxxx@mail.com).
+                    </div>
+                </div>
+            </md-input-container>
+
+            <md-input-container class="md-block" flex-gt-sm>
+                <label>Telefono</label>
+                <input name="telefono" ng-model="telefono" required md-maxlength="8" minlength="8">
+                <div ng-messages="userForm.telefono.$error" ng-show="userForm.telefono.$dirty">
+                    <div ng-message="required">Este campo es requerido!</div>
+                    <div ng-message="md-maxlength">El texto es demasiado largo!</div>
+                    <div ng-message="minlength">El telefono es muy corto!</div>
+                </div>
+            </md-input-container>
+
+        </div>
+
+        <div layout="row" layout-align="end" flex>
+            <md-button ng-click="clearValue()" ng-disabled="!(quest || favoriteColor)">Clear</md-button>
+            <md-button ng-click="save()" class="md-primary">Save</md-button>
+        </div>
     </form>
+
+
+
+
 
 
     </br>
