--- a/index.html
+++ b/index.html
@@ -14,33 +14,27 @@
   <link rel="stylesheet" href="https://gitcdn.link/repo/angular/bower-material/master/angular-material.css">
   <link rel="stylesheet" href="app/css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  
+  <link rel="stylesheet" href="vendor/sweetalert2/dist/sweetalert2.min.css">
+
 </head>
 
-<body >
-
-  
-  <!--<md-sidenav class="md-sidenav-left" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="4" fullscreen>
-    <md-toolbar class="md-medium-tall" md-colors="{background: 'pink'}">
-      <span>sidenav</span>
-    </md-toolbar>
-    <md-content layout="column" flex>
-      <span>Your sidenav</span>
-    </md-content>
-  </md-sidenav>-->
+<body>
 
   <!-- Main Container -->
 
-  <div ui-view=""  ></div>
+  <div ui-view=""></div>
 
 
   <!-- Framework Scripts -->
-
+  
   <!--Local Scripts-->
   <script src="vendor/angular/angular.min.js"></script>
   <script src="vendor/angular-animate/angular-animate.min.js"></script>
   <script src="vendor/ui-router/angular-ui-router.min.js"></script>
   <script src="vendor/angular-oclazyload/ocLazyLoad.min.js"></script>
   <script src="vendor/angular-messages/angular-messages.min.js"></script>
+  <script src="vendor/sweetalert2/dist/sweetalert2.min.js"></script>
 
   <!-- Remote Scripts -->
   <script src="https://gitcdn.link/repo/angular/bower-material/master/angular-material.js"></script>
