--- a/app/shared/states/vista2/vista2.html
+++ b/app/shared/states/vista2/vista2.html
@@ -11,7 +11,7 @@
             <md-input-container class="md-icon-float md-block" flex-gt-sm>
                 <label>Nombre</label>
                 <md-icon class="material-icons">account_circle</md-icon>
-                <input name="nombre" ng-model="vm.nombre" required minlength="3">
+                <input name="nombre" ng-model="vm.empleado.nombre" required minlength="3">
                 <div ng-messages="vm.userForm.nombre.$error" ng-show="vm.userForm.nombre.$dirty">
                     <div ng-message="required">Este campo es requerido!</div>
                     <div ng-message="minlength">El nombre debe contener al menos 3 caracteres</div>
@@ -22,7 +22,7 @@
             <md-input-container class="md-icon-float md-block" flex-gt-sm>
                 <label>Apellido</label>
                 <md-icon class="material-icons">account_circle</md-icon>
-                <input ng-model="vm.apellido" required>
+                <input ng-model="vm.empleado.apellido" required>
             </md-input-container>
 
 
@@ -33,7 +33,7 @@
             <md-input-container class="md-icon-float md-block" flex-gt-sm>
                 <label>Correo Electronico</label>
                 <md-icon class="material-icons">mail</md-icon>
-                <input required type="email" name="clientEmail" ng-model="vm.clientEmail" minlength="10" maxlength="100" ng-pattern="/^.+@.+\..+$/"
+                <input required type="email" name="clientEmail" ng-model="vm.empleado.clientEmail" minlength="10" maxlength="100" ng-pattern="/^.+@.+\..+$/"
                     placeholder="ejemplo@mail.com" />
 
                 <div ng-messages="vm.userForm.clientEmail.$error" role="alert">
@@ -46,7 +46,7 @@
             <md-input-container class="md-icon-float md-block" flex-gt-sm>
                 <label>Telefono</label>
                 <md-icon class="material-icons">phone</md-icon>
-                <input name="telefono" ng-model="vm.telefono" required md-maxlength="8" minlength="8">
+                <input name="telefono" ng-model="vm.empleado.telefono" required md-maxlength="8" minlength="8">
                 <div ng-messages="vm.userForm.telefono.$error" ng-show="vm.userForm.telefono.$dirty">
                     <div ng-message="required">Este campo es requerido!</div>
                     <div ng-message="md-maxlength">El texto es demasiado largo!</div>
