--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <link rel="stylesheet" href="https://gitcdn.link/repo/angular/bower-material/master/angular-material.css">
   <link rel="stylesheet" href="app/css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  
+
   <link rel="stylesheet" href="vendor/sweetalert2/dist/sweetalert2.min.css">
+  <link href="vendor/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet" type="text/css" />
+
 
 </head>
 
@@ -27,7 +29,7 @@
 
 
   <!-- Framework Scripts -->
-  
+
   <!--Local Scripts-->
   <script src="vendor/angular/angular.min.js"></script>
   <script src="vendor/angular-animate/angular-animate.min.js"></script>
@@ -39,6 +41,8 @@
   <!-- Remote Scripts -->
   <script src="https://gitcdn.link/repo/angular/bower-material/master/angular-material.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.11/angular-aria.js"></script>
+
+  <script type="text/javascript" src="vendor/angular-material-data-table/dist/md-data-table.min.js"></script>
 
   <!--Main App Script-->
   <script src="app/app.js"></script>
