Cambios en side menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
   <link rel="stylesheet" href="vendor/sweetalert2/dist/sweetalert2.min.css">
-  <link href="vendor/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="vendor/angular-material-data-table/dist/md-data-table.min.css">
+  <link rel="stylesheet" href="vendor/angular-material-sidemenu/angular-material-sidemenu.css">
 
 
 </head>
@@ -37,12 +38,12 @@
   <script src="vendor/angular-oclazyload/ocLazyLoad.min.js"></script>
   <script src="vendor/angular-messages/angular-messages.min.js"></script>
   <script src="vendor/sweetalert2/dist/sweetalert2.min.js"></script>
+  <script src="vendor/angular-material-sidemenu/angular-material-sidemenu.js"></script>
+  <script src="vendor/angular-material-data-table/dist/md-data-table.min.js"></script>
 
   <!-- Remote Scripts -->
   <script src="https://gitcdn.link/repo/angular/bower-material/master/angular-material.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.11/angular-aria.js"></script>
-
-  <script type="text/javascript" src="vendor/angular-material-data-table/dist/md-data-table.min.js"></script>
 
   <!--Main App Script-->
   <script src="app/app.js"></script>
