Componente de tabulación y navegación con iconos

--- a/app/shared/states/vista3/vista3.html
+++ b/app/shared/states/vista3/vista3.html
@@ -4,7 +4,12 @@
         <h3>Vista 3</h3>
     </center>
 </div>
-    
+
 <br/>
 
+<div flex flex-sm="100" flex-gt-sm="95" flex-gt-md="80" layout="column">
+    <nav-tab items="vm.items"></nav-tab>
+</div>
+<br/>
 
+<div ui-view="" autoscroll="false"></div>
